--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,256 @@ h1 {
   font-weight: normal;
   font-style: normal; }
 
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400; }
+
+.header {
+  background: url(../images/header/header-back.png) no-repeat top;
+  background-color: white;
+  background-size: contain;
+  padding: 30px 144px 150px;
+  overflow: hidden;
+  font-size: 16px;
+  line-height: 150%;
+  height: 640px; }
+  .header__img {
+    width: 100%; }
+  .header__row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    .header__row-left {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: end;
+          -ms-flex-pack: end;
+              justify-content: flex-end; }
+      .header__row-left-link {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: end;
+            -ms-flex-pack: end;
+                justify-content: flex-end; }
+    .header__row-right {
+      width: 43%; }
+    .header__row-center {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: end;
+          -ms-flex-align: end;
+              align-items: flex-end;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box;
+      width: 43%; }
+
+@media screen and (max-width: 999px) {
+  .header {
+    padding: 30px 70px; } }
+
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400; }
+
+.nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 90px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden; }
+  .nav__mobile {
+    display: none; }
+  .nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 34%;
+    min-width: 450px; }
+  .nav__item {
+    display: inline-block;
+    color: #4f4f4f; }
+  .nav__link {
+    color: #4f4f4f;
+    -webkit-transition: color 1s;
+    transition: color 1s; }
+    .nav__link:hover {
+      color: #0386a0; }
+
+.nav__mobile-button,
+.nav__mobile-close,
+.nav__item:first-child {
+  display: none; }
+
+@media screen and (max-width: 999px) {
+  .nav {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    .nav__mobile-button {
+      display: block;
+      position: absolute;
+      top: 30px;
+      right: 70px; }
+    .nav__bag {
+      display: none; }
+    .nav__list {
+      position: absolute;
+      top: -20px;
+      right: 0;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: start;
+          -ms-flex-pack: start;
+              justify-content: flex-start;
+      background: #0386a0;
+      height: 450px;
+      width: 230px;
+      min-width: 230px;
+      padding-top: 70px;
+      -webkit-transform: translateX(100%);
+              transform: translateX(100%);
+      -webkit-transition: -webkit-transform 1s;
+      transition: -webkit-transform 1s;
+      transition: transform 1s;
+      transition: transform 1s, -webkit-transform 1s; }
+  .nav--is-active .nav {
+    -webkit-box-align: space-between;
+        -ms-flex-align: space-between;
+            align-items: space-between;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    position: relative; }
+    .nav--is-active .nav__list {
+      -webkit-transition: -webkit-transform 1s;
+      transition: -webkit-transform 1s;
+      transition: transform 1s;
+      transition: transform 1s, -webkit-transform 1s;
+      -webkit-transform: translateX(0);
+              transform: translateX(0); }
+    .nav--is-active .nav__item {
+      margin-top: 30px; }
+      .nav--is-active .nav__item:first-child {
+        display: block; }
+    .nav--is-active .nav__link {
+      color: white; }
+    .nav--is-active .nav__mobile-button {
+      display: none; }
+    .nav--is-active .nav__mobile-close {
+      display: inline-block;
+      -webkit-transform: rotate(-90deg);
+              transform: rotate(-90deg);
+      -webkit-transform-origin: bottom;
+              transform-origin: bottom;
+      position: absolute;
+      bottom: 110px;
+      right: -50px;
+      color: white; } }
+
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400; }
+
+.button {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 240px;
+  height: 50px;
+  border: 1px solid #0386a0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-right: 80px;
+  font-size: 14px;
+  text-transform: uppercase;
+  background-color: white;
+  color: #121212;
+  -webkit-transition: color 0.7s, -webkit-transform 0.7s;
+  transition: color 0.7s, -webkit-transform 0.7s;
+  transition: transform 0.7s, color 0.7s;
+  transition: transform 0.7s, color 0.7s, -webkit-transform 0.7s; }
+  .button__arrow {
+    margin-left: 10px; }
+  .button:hover {
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+    color: #0386a0; }
+
 body {
-  background: #eee; }
+  background: #eee;
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  overflow-x: hidden; }
+
+a {
+  text-decoration: none;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s; }
+  a:hover {
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05); }
+
+strong {
+  font-size: 26px;
+  line-height: 32px;
+  color: #333333; }
+
+.price {
+  font-size: 14px;
+  line-height: 150%;
+  color: #4f4f4f;
+  margin-bottom: 50px;
+  margin-top: 0; }
 
 /*# sourceMappingURL=main.css.map */
