--- a/styles/button.css
+++ b/styles/button.css
@@ -19,15 +19,25 @@
   text-transform: uppercase;
   background-color: white;
   color: #121212;
-  -webkit-transition: color 0.7s, -webkit-transform 0.7s;
-  transition: color 0.7s, -webkit-transform 0.7s;
-  transition: transform 0.7s, color 0.7s;
-  transition: transform 0.7s, color 0.7s, -webkit-transform 0.7s; }
+  -webkit-transition: color 0.5s, -webkit-transform 0.5s;
+  transition: color 0.5s, -webkit-transform 0.5s;
+  transition: transform 0.5s, color 0.5s;
+  transition: transform 0.5s, color 0.5s, -webkit-transform 0.5s; }
   .button__arrow {
     margin-left: 10px; }
   .button:hover {
-    -webkit-transform: scale(1.05);
-            transform: scale(1.05);
+    -webkit-box-shadow: 2px 2px 5px rgba(154, 147, 140, 0.5);
+            box-shadow: 2px 2px 5px rgba(154, 147, 140, 0.5);
     color: #0386a0; }
+
+@media screen and (max-width: 850px) {
+  .button {
+    width: 90%;
+    margin-right: 0;
+    background-color: #ffe438; } }
+
+@media screen and (max-width: 550px) {
+  .button {
+    margin: 20px 0; } }
 
 /*# sourceMappingURL=button.css.map */
