--- a/styles/main.css
+++ b/styles/main.css
@@ -8,82 +8,120 @@ h1 {
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: "Bebas Neue", cursive;
+  src: url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"); }
+
+@font-face {
+  font-family: "Proxima Nova";
+  src: local("Proxima Nova Thin") local("Proxima-Nova-Thin"), url("ProximaNovaT-Thin.woff2") format("woff2"), url("ProximaNovaT-Thin.woff") format("woff"), url("ProximaNovaT-Thin.ttf") format("truetype");
+  font-weight: 100;
+  font-style: normal; }
+
 h1 {
   font-family: "Roboto", sans-serif;
   font-weight: 400; }
 
 .header {
-  background: url(../images/header/header-back.png) no-repeat top;
-  background-color: white;
-  background-size: contain;
+  background: url(../images/header/header-back.png) no-repeat left top;
   padding: 30px 144px 150px;
+  background-size: 80% 60%;
   overflow: hidden;
   font-size: 16px;
   line-height: 150%;
   height: 640px; }
-  .header__img {
-    width: 100%; }
   .header__row {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
-            justify-content: space-between; }
-    .header__row-left {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-      -webkit-box-pack: end;
-          -ms-flex-pack: end;
-              justify-content: flex-end; }
-      .header__row-left-link {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
-        -webkit-box-pack: end;
-            -ms-flex-pack: end;
-                justify-content: flex-end; }
-    .header__row-right {
-      width: 43%; }
-    .header__row-center {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
-      -webkit-box-align: end;
-          -ms-flex-align: end;
-              align-items: flex-end;
-      -webkit-box-sizing: border-box;
-              box-sizing: border-box;
-      width: 43%; }
+            justify-content: space-between;
+    position: relative; }
+
+.header-content__img {
+  width: 100%; }
+
+.header-content__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end; }
+
+.header-content__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end; }
+
+.header-content__right {
+  width: 43%; }
+
+.header-content__center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 43%; }
 
 @media screen and (max-width: 999px) {
   .header {
-    padding: 30px 70px; } }
+    height: auto;
+    padding: 30px 5%; } }
+
+@media screen and (max-width: 550px) {
+  .header-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding: 30px 0;
+    max-width: 100%; }
+    .header-content__center {
+      width: 100%;
+      -webkit-box-align: start;
+          -ms-flex-align: start;
+              align-items: flex-start; }
+    .header-content__right {
+      width: 100%; }
+    .header-content__img {
+      width: 100%; } }
 
 h1 {
   font-family: "Roboto", sans-serif;
   font-weight: 400; }
 
 .nav {
+  overflow-x: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -128,18 +166,20 @@ h1 {
             align-items: flex-start;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
-            justify-content: space-between; }
+            justify-content: space-between;
+    overflow: hidden; }
     .nav__mobile-button {
       display: block;
       position: absolute;
       top: 30px;
-      right: 70px; }
+      right: 5%; }
     .nav__bag {
       display: none; }
     .nav__list {
+      width: 1px;
       position: absolute;
       top: -20px;
-      right: 0;
+      right: 100%;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -152,15 +192,12 @@ h1 {
               justify-content: flex-start;
       background: #0386a0;
       height: 450px;
-      width: 230px;
       min-width: 230px;
       padding-top: 70px;
-      -webkit-transform: translateX(100%);
-              transform: translateX(100%);
-      -webkit-transition: -webkit-transform 1s;
-      transition: -webkit-transform 1s;
-      transition: transform 1s;
-      transition: transform 1s, -webkit-transform 1s; }
+      -webkit-transition: right 1s;
+      transition: right 1s; }
+    .nav__link {
+      color: white; }
   .nav--is-active .nav {
     -webkit-box-align: space-between;
         -ms-flex-align: space-between;
@@ -170,18 +207,13 @@ h1 {
             justify-content: flex-start;
     position: relative; }
     .nav--is-active .nav__list {
-      -webkit-transition: -webkit-transform 1s;
-      transition: -webkit-transform 1s;
-      transition: transform 1s;
-      transition: transform 1s, -webkit-transform 1s;
-      -webkit-transform: translateX(0);
-              transform: translateX(0); }
+      -webkit-transition: right 1s;
+      transition: right 1s;
+      right: 0; }
     .nav--is-active .nav__item {
       margin-top: 30px; }
       .nav--is-active .nav__item:first-child {
         display: block; }
-    .nav--is-active .nav__link {
-      color: white; }
     .nav--is-active .nav__mobile-button {
       display: none; }
     .nav--is-active .nav__mobile-close {
@@ -220,16 +252,290 @@ h1 {
   text-transform: uppercase;
   background-color: white;
   color: #121212;
-  -webkit-transition: color 0.7s, -webkit-transform 0.7s;
-  transition: color 0.7s, -webkit-transform 0.7s;
-  transition: transform 0.7s, color 0.7s;
-  transition: transform 0.7s, color 0.7s, -webkit-transform 0.7s; }
+  -webkit-transition: color 0.5s, -webkit-transform 0.5s;
+  transition: color 0.5s, -webkit-transform 0.5s;
+  transition: transform 0.5s, color 0.5s;
+  transition: transform 0.5s, color 0.5s, -webkit-transform 0.5s; }
   .button__arrow {
     margin-left: 10px; }
   .button:hover {
-    -webkit-transform: scale(1.05);
-            transform: scale(1.05);
+    -webkit-box-shadow: 2px 2px 5px rgba(154, 147, 140, 0.5);
+            box-shadow: 2px 2px 5px rgba(154, 147, 140, 0.5);
     color: #0386a0; }
+
+@media screen and (max-width: 850px) {
+  .button {
+    width: 90%;
+    margin-right: 0;
+    background-color: #ffe438; } }
+
+@media screen and (max-width: 550px) {
+  .button {
+    margin: 20px 0; } }
+
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400; }
+
+.description {
+  padding: 150px 135px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+  .description__row-top {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-bottom: 80px; }
+  .description__row-down {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .description__main-img {
+    height: 500px;
+    width: 60%;
+    max-width: 500px;
+    margin-right: 30px; }
+
+@media screen and (max-width: 1200px) {
+  .description {
+    padding: 50px 35px; } }
+
+@media screen and (max-width: 900px) {
+  .description {
+    text-align: center; }
+    .description__row-top {
+      width: 100%;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+    .description__row-down {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+    .description__main-img {
+      display: none; } }
+
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400; }
+
+.descr-down__left {
+  width: 35%; }
+
+.descr-down__right {
+  width: 45%; }
+
+.descr-down__img {
+  width: 100%; }
+  .descr-down__img--small {
+    height: 415px; }
+  .descr-down__img--big {
+    height: 670px; }
+
+@media screen and (max-width: 900px) {
+  .descr-down__left {
+    width: 100%; }
+  .descr-down__img {
+    display: none; } }
+
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400; }
+
+.features {
+  padding: 0 135px 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+  .features__main-title {
+    margin-bottom: 80px; }
+  .features__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+  .features__item {
+    width: 30%;
+    min-width: 160px;
+    text-align: center; }
+  .features__img {
+    max-width: 100%; }
+  .features__title {
+    text-align: center; }
+
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400; }
+
+.team {
+  padding: 0 135px 225px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  position: relative; }
+  .team__big-word--1 {
+    width: 70%;
+    height: 150px;
+    position: absolute;
+    left: 100px;
+    top: 200px;
+    z-index: 2; }
+  .team__big-word--2 {
+    height: 150px;
+    width: 50%;
+    position: absolute;
+    right: 100px;
+    bottom: 130px;
+    z-index: 2; }
+  .team__main-img {
+    min-width: 500px;
+    max-width: 650px;
+    max-height: 550px;
+    width: 55%;
+    margin-left: 60px; }
+  .team__container {
+    background: url(../images/header/header-back.png) no-repeat left top;
+    background-size: 30% 30%;
+    padding-left: 60px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start; }
+  .team__text {
+    padding-top: 150px;
+    display: block;
+    width: 30%;
+    text-align: center; }
+  .team__title {
+    margin-bottom: 150px; }
+
+@media screen and (max-width: 1200px) {
+  .team {
+    padding: 0 50px 150px; }
+    .team__text {
+      padding-top: 60px; } }
+
+@media screen and (max-width: 900px) {
+  .team__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0; }
+  .team__text {
+    width: 90%; }
+  .team__main-img {
+    margin: 0 0 50px; }
+  .team__big-word--1, .team__big-word--2 {
+    display: none; }
+  .team__title {
+    margin-bottom: 50px; } }
+
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400; }
+
+.materials {
+  background: url(../images/materials/back.png) no-repeat center;
+  background-size: cover;
+  height: 70vw;
+  width: 100vw;
+  position: relative; }
+  .materials__title {
+    width: 60%;
+    margin-left: 10%; }
+  .materials__container {
+    height: calc(100% - 100px);
+    width: 32%;
+    text-align: left;
+    position: absolute;
+    top: 100px;
+    right: 10%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .materials__text {
+    width: 100%;
+    display: block; }
+    .materials__text:last-child {
+      width: 80%;
+      padding: 35px;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box;
+      background: rgba(0, 0, 0, 0.41);
+      mix-blend-mode: normal;
+      -webkit-backdrop-filter: blur(34px);
+              backdrop-filter: blur(34px); }
+
+@media screen and (max-width: 950px) {
+  .materials__container {
+    width: 100%; }
+  .materials__text:last-child {
+    width: 70%;
+    position: absolute;
+    bottom: 0;
+    left: 15%; }
+  .materials__text:first-child {
+    display: none; } }
 
 body {
   background: #eee;
@@ -237,6 +543,35 @@ body {
   padding: 0;
   scroll-behavior: smooth;
   overflow-x: hidden; }
+
+html {
+  overflow-x: hidden;
+  font-family: "Proxima Nova", sans-serif;
+  font-size: 16px;
+  line-height: 150%; }
+
+h2 {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 58px;
+  line-height: 58px;
+  letter-spacing: 0.15em;
+  color: #333333;
+  text-transform: uppercase; }
+
+h3 {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 36px;
+  line-height: 150%;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  color: black; }
+
+h4 {
+  font-size: 24px;
+  line-height: 24px;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  color: #333333; }
 
 a {
   text-decoration: none;
@@ -248,16 +583,22 @@ a {
     -webkit-transform: scale(1.05);
             transform: scale(1.05); }
 
-strong {
-  font-size: 26px;
-  line-height: 32px;
-  color: #333333; }
+p {
+  margin-bottom: 20px;
+  margin-top: 20px; }
 
 .price {
+  font-family: "Proxima Nova", sans-serif;
   font-size: 14px;
-  line-height: 150%;
-  color: #4f4f4f;
-  margin-bottom: 50px;
-  margin-top: 0; }
+  line-height: 21px;
+  color: #333333; }
+
+.container-center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
 
 /*# sourceMappingURL=main.css.map */
