--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,4 +1,5 @@
 .nav {
+  overflow-x: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -43,18 +44,20 @@
             align-items: flex-start;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
-            justify-content: space-between; }
+            justify-content: space-between;
+    overflow: hidden; }
     .nav__mobile-button {
       display: block;
       position: absolute;
       top: 30px;
-      right: 70px; }
+      right: 5%; }
     .nav__bag {
       display: none; }
     .nav__list {
+      width: 1px;
       position: absolute;
       top: -20px;
-      right: 0;
+      right: 100%;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -67,15 +70,12 @@
               justify-content: flex-start;
       background: #0386a0;
       height: 450px;
-      width: 230px;
       min-width: 230px;
       padding-top: 70px;
-      -webkit-transform: translateX(100%);
-              transform: translateX(100%);
-      -webkit-transition: -webkit-transform 1s;
-      transition: -webkit-transform 1s;
-      transition: transform 1s;
-      transition: transform 1s, -webkit-transform 1s; }
+      -webkit-transition: right 1s;
+      transition: right 1s; }
+    .nav__link {
+      color: white; }
   .nav--is-active .nav {
     -webkit-box-align: space-between;
         -ms-flex-align: space-between;
@@ -85,18 +85,13 @@
             justify-content: flex-start;
     position: relative; }
     .nav--is-active .nav__list {
-      -webkit-transition: -webkit-transform 1s;
-      transition: -webkit-transform 1s;
-      transition: transform 1s;
-      transition: transform 1s, -webkit-transform 1s;
-      -webkit-transform: translateX(0);
-              transform: translateX(0); }
+      -webkit-transition: right 1s;
+      transition: right 1s;
+      right: 0; }
     .nav--is-active .nav__item {
       margin-top: 30px; }
       .nav--is-active .nav__item:first-child {
         display: block; }
-    .nav--is-active .nav__link {
-      color: white; }
     .nav--is-active .nav__mobile-button {
       display: none; }
     .nav--is-active .nav__mobile-close {
