--- a/styles/description.css
+++ b/styles/description.css
@@ -1,62 +1,104 @@
 .description {
   padding: 150px 135px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
-  .description__row-top {
+  .description__container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    margin-bottom: 80px; }
-  .description__row-down {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center; }
-  .description__main-img {
-    height: 500px;
-    width: 60%;
-    max-width: 500px;
-    margin-right: 30px; }
-
-@media screen and (max-width: 1200px) {
-  .description {
-    padding: 50px 35px; } }
-
-@media screen and (max-width: 900px) {
-  .description {
-    text-align: center; }
-    .description__row-top {
-      width: 100%;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center; }
-    .description__row-down {
+  .description__item {
+    margin-top: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-item-align: center;
+        align-self: center; }
+    .description__item:first-child {
+      width: 100%; }
+    .description__item:nth-child(2) {
+      width: 35%;
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
           -ms-flex-direction: column;
               flex-direction: column;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center; }
-    .description__main-img {
-      display: none; } }
+      margin-left: 10%; }
+    .description__item:last-child {
+      width: 45%;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+  .description__img {
+    max-width: 500px;
+    height: auto; }
+    .description__img--small {
+      width: 100%;
+      max-width: 350px; }
+    .description__img--medium {
+      width: 60%;
+      margin-right: 30px; }
+    .description__img--big {
+      width: 100%; }
+
+@media screen and (max-width: 1200px) {
+  .description {
+    padding: 50px 35px; }
+    .description__container {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+    .description__item {
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
+      .description__item:nth-child(2) {
+        width: 100%;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: reverse;
+            -ms-flex-direction: row-reverse;
+                flex-direction: row-reverse;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        margin: 0; }
+      .description__item:last-child {
+        width: 100%;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; }
+    .description__img, .description__text {
+      width: 45%; } }
+
+@media screen and (max-width: 900px) {
+  .description__item:nth-child(-n+3) {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .description__text {
+    width: 100%;
+    text-align: center; } }
+
+@media screen and (max-width: 500px) {
+  .description__text {
+    text-align: left; }
+  .description__img {
+    display: none; } }
 
 /*# sourceMappingURL=description.css.map */
