--- a/styles/main.css
+++ b/styles/main.css
@@ -39,6 +39,15 @@ h1 {
             justify-content: space-between;
     position: relative; }
 
+@media screen and (max-width: 999px) {
+  .header {
+    height: auto;
+    padding: 30px 5%; } }
+
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400; }
+
 .header-content__img {
   width: 100%; }
 
@@ -90,22 +99,18 @@ h1 {
           box-sizing: border-box;
   width: 43%; }
 
-@media screen and (max-width: 999px) {
-  .header {
-    height: auto;
-    padding: 30px 5%; } }
-
 @media screen and (max-width: 550px) {
   .header-content {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 30px 0;
-    max-width: 100%; }
+    max-width: 100%;
+    position: relative; }
     .header-content__center {
       width: 100%;
       -webkit-box-align: start;
@@ -113,6 +118,10 @@ h1 {
               align-items: flex-start; }
     .header-content__right {
       width: 100%; }
+    .header-content__left {
+      position: absolute;
+      right: 0;
+      bottom: 120px; }
     .header-content__img {
       width: 100%; } }
 
@@ -180,6 +189,7 @@ h1 {
       position: absolute;
       top: -20px;
       right: 100%;
+      z-index: 2;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -279,86 +289,105 @@ h1 {
 
 .description {
   padding: 150px 135px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
-  .description__row-top {
+  .description__container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    margin-bottom: 80px; }
-  .description__row-down {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center; }
-  .description__main-img {
-    height: 500px;
-    width: 60%;
-    max-width: 500px;
-    margin-right: 30px; }
-
-@media screen and (max-width: 1200px) {
-  .description {
-    padding: 50px 35px; } }
-
-@media screen and (max-width: 900px) {
-  .description {
-    text-align: center; }
-    .description__row-top {
-      width: 100%;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center; }
-    .description__row-down {
+  .description__item {
+    margin-top: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-item-align: center;
+        align-self: center; }
+    .description__item:first-child {
+      width: 100%; }
+    .description__item:nth-child(2) {
+      width: 35%;
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
           -ms-flex-direction: column;
               flex-direction: column;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center; }
-    .description__main-img {
-      display: none; } }
+      margin-left: 10%; }
+    .description__item:last-child {
+      width: 45%;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+  .description__img {
+    max-width: 500px;
+    height: auto; }
+    .description__img--small {
+      width: 100%;
+      max-width: 350px; }
+    .description__img--medium {
+      width: 60%;
+      margin-right: 30px; }
+    .description__img--big {
+      width: 100%; }
 
-h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400; }
-
-.descr-down__left {
-  width: 35%; }
-
-.descr-down__right {
-  width: 45%; }
-
-.descr-down__img {
-  width: 100%; }
-  .descr-down__img--small {
-    height: 415px; }
-  .descr-down__img--big {
-    height: 670px; }
+@media screen and (max-width: 1200px) {
+  .description {
+    padding: 50px 35px; }
+    .description__container {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+    .description__item {
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
+      .description__item:nth-child(2) {
+        width: 100%;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: reverse;
+            -ms-flex-direction: row-reverse;
+                flex-direction: row-reverse;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        margin: 0; }
+      .description__item:last-child {
+        width: 100%;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; }
+    .description__img, .description__text {
+      width: 45%; } }
 
 @media screen and (max-width: 900px) {
-  .descr-down__left {
-    width: 100%; }
-  .descr-down__img {
+  .description__item:nth-child(-n+3) {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .description__text {
+    width: 100%;
+    text-align: center; } }
+
+@media screen and (max-width: 500px) {
+  .description__text {
+    text-align: left; }
+  .description__img {
     display: none; } }
 
 h1 {
@@ -380,7 +409,8 @@ h1 {
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
   .features__main-title {
-    margin-bottom: 80px; }
+    margin-bottom: 80px;
+    width: 60%; }
   .features__container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -392,12 +422,21 @@ h1 {
         flex-wrap: wrap; }
   .features__item {
     width: 30%;
-    min-width: 160px;
-    text-align: center; }
+    min-width: 220px;
+    text-align: center;
+    padding: 15px; }
   .features__img {
     max-width: 100%; }
   .features__title {
     text-align: center; }
+
+@media screen and (max-width: 1200px) {
+  .features {
+    padding: 0 50px 35px; }
+    .features__container {
+      -webkit-box-pack: space-evenly;
+          -ms-flex-pack: space-evenly;
+              justify-content: space-evenly; } }
 
 h1 {
   font-family: "Roboto", sans-serif;
@@ -433,7 +472,6 @@ h1 {
   .team__main-img {
     min-width: 500px;
     max-width: 650px;
-    max-height: 550px;
     width: 55%;
     margin-left: 60px; }
   .team__container {
@@ -541,10 +579,10 @@ body {
   background: #eee;
   margin: 0;
   padding: 0;
-  scroll-behavior: smooth;
   overflow-x: hidden; }
 
 html {
+  scroll-behavior: smooth;
   overflow-x: hidden;
   font-family: "Proxima Nova", sans-serif;
   font-size: 16px;
