--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -58,6 +58,7 @@
       position: absolute;
       top: -20px;
       right: 100%;
+      z-index: 2;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
