--- a/styles/main.css
+++ b/styles/main.css
@@ -639,6 +639,187 @@ h1 {
   .extra__item {
     width: 49%; }
 
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400; }
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+  .form__input, .form__textarea {
+    margin-bottom: 32px;
+    padding-bottom: 16px;
+    padding-top: 16px;
+    width: 100%;
+    font-family: "Proxima Nova", sans-serif;
+    font-size: 16px;
+    line-height: 150%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    color: #4f4f4f;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    background-color: #ffec7a;
+    -webkit-transition: border-color 1s;
+    transition: border-color 1s; }
+    .form__input::-webkit-input-placeholder, .form__textarea::-webkit-input-placeholder {
+      font-family: "Proxima Nova", sans-serif;
+      font-size: 16px;
+      line-height: 150%;
+      display: -webkit-box;
+      display: flex;
+      -webkit-box-align: end;
+              align-items: flex-end;
+      color: #4f4f4f;
+      opacity: 0.7; }
+    .form__input::-moz-placeholder, .form__textarea::-moz-placeholder {
+      font-family: "Proxima Nova", sans-serif;
+      font-size: 16px;
+      line-height: 150%;
+      display: flex;
+      align-items: flex-end;
+      color: #4f4f4f;
+      opacity: 0.7; }
+    .form__input:-ms-input-placeholder, .form__textarea:-ms-input-placeholder {
+      font-family: "Proxima Nova", sans-serif;
+      font-size: 16px;
+      line-height: 150%;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-align: end;
+          align-items: flex-end;
+      color: #4f4f4f;
+      opacity: 0.7; }
+    .form__input::-ms-input-placeholder, .form__textarea::-ms-input-placeholder {
+      font-family: "Proxima Nova", sans-serif;
+      font-size: 16px;
+      line-height: 150%;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-align: end;
+          align-items: flex-end;
+      color: #4f4f4f;
+      opacity: 0.7; }
+    .form__input::placeholder, .form__textarea::placeholder {
+      font-family: "Proxima Nova", sans-serif;
+      font-size: 16px;
+      line-height: 150%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: end;
+          -ms-flex-align: end;
+              align-items: flex-end;
+      color: #4f4f4f;
+      opacity: 0.7; }
+    .form__input:focus, .form__textarea:focus {
+      border-color: red; }
+
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400; }
+
+.footer {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: relative;
+  top: -25px;
+  background: url(../images/header/header-back.png) no-repeat left top;
+  background-size: 100% 100%;
+  background-color: #eee;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 180px 0 84px 14.2%;
+  color: #fff; }
+  .footer__part {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .footer__title {
+    margin-bottom: 26px;
+    color: #fff; }
+  .footer__text {
+    margin-bottom: 8px; }
+  .footer__link {
+    margin-bottom: 48px; }
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 76.3%;
+    margin-bottom: 121px;
+    max-width: 1145px; }
+  .footer__left {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 44%; }
+  .footer__right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    width: 35%; }
+
+@media screen and (min-width: 1600px) {
+  .footer {
+    padding-left: calc(100% / 2 - 1145px / 2); } }
+
+@media screen and (max-width: 1000px) {
+  .footer {
+    padding-top: 20px; }
+    .footer__wrap {
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      -webkit-box-pack: left;
+          -ms-flex-pack: left;
+              justify-content: left; }
+    .footer__nav {
+      display: none; }
+    .footer__container {
+      padding-top: 20px;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+    .footer__left {
+      width: 100%;
+      margin-bottom: 35px; }
+    .footer__right {
+      width: 100%; } }
+
 body {
   background: #eee;
   margin: 0;
