--- a/styles/description.css
+++ b/styles/description.css
@@ -48,6 +48,11 @@
     .description__img--big {
       width: 100%; }
 
+@media screen and (min-width: 1600px) {
+  .description {
+    padding-left: calc(50% - 575px);
+    padding-right: calc(50% - 575px); } }
+
 @media screen and (max-width: 1200px) {
   .description {
     padding: 50px 35px; }
