--- a/styles/features.css
+++ b/styles/features.css
@@ -1,5 +1,4 @@
 .features {
-  padding: 0 135px 150px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10,6 +9,7 @@
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  padding: 0 135px 150px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
   .features__main-title {
@@ -30,7 +30,16 @@
     text-align: center;
     padding: 15px; }
   .features__img {
-    max-width: 100%; }
+    max-width: 100%;
+    -webkit-transition: -webkit-transform 1s;
+    transition: -webkit-transform 1s;
+    transition: transform 1s;
+    transition: transform 1s, -webkit-transform 1s; }
+    .features__img:hover {
+      -webkit-box-shadow: 0 6px 23px rgba(154, 147, 140, 0.5);
+              box-shadow: 0 6px 23px rgba(154, 147, 140, 0.5);
+      -webkit-transform: scale(1.05);
+              transform: scale(1.05); }
   .features__title {
     text-align: center; }
 
@@ -41,5 +50,10 @@
       -webkit-box-pack: space-evenly;
           -ms-flex-pack: space-evenly;
               justify-content: space-evenly; } }
+
+@media screen and (min-width: 1600px) {
+  .features {
+    padding-left: calc(50% - 575px);
+    padding-right: calc(50% - 575px); } }
 
 /*# sourceMappingURL=features.css.map */
