--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,19 +1,27 @@
 .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  position: relative;
-  top: -25px;
-  background: url(../images/header/header-back.png) no-repeat left top;
-  background-size: 100% 100%;
-  background-color: #eee;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 180px 0 84px 14.2%;
-  color: #fff; }
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 40px 135px;
+  position: relative;
+  top: -50px;
+  background: url(../images/header/header-back.png) no-repeat left top;
+  background-size: cover;
+  width: 100%; }
   .footer__part {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -23,12 +31,7 @@
         -ms-flex-direction: column;
             flex-direction: column; }
   .footer__title {
-    margin-bottom: 26px;
-    color: #fff; }
-  .footer__text {
-    margin-bottom: 8px; }
-  .footer__link {
-    margin-bottom: 48px; }
+    margin-bottom: 20px; }
   .footer__container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -36,9 +39,8 @@
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    width: 76.3%;
-    margin-bottom: 121px;
-    max-width: 1145px; }
+    width: 100%;
+    margin-bottom: 121px; }
   .footer__left {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -59,24 +61,54 @@
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    width: 35%; }
+    margin-top: 150px;
+    width: 34%; }
+  .footer__row {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .footer__wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: space-between;
+        -ms-flex-align: space-between;
+            align-items: space-between; }
+  .footer__icon-cont {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
 
 @media screen and (min-width: 1600px) {
   .footer {
-    padding-left: calc(100% / 2 - 1145px / 2); } }
+    padding-left: calc(50% - 575px);
+    padding-right: calc(50% - 575px); } }
 
 @media screen and (max-width: 1000px) {
   .footer {
-    padding-top: 20px; }
-    .footer__wrap {
+    padding: 20px 50px; }
+    .footer__part {
       width: 100%;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       -webkit-box-pack: left;
           -ms-flex-pack: left;
               justify-content: left; }
-    .footer__nav {
-      display: none; }
     .footer__container {
       padding-top: 20px;
       -webkit-box-orient: vertical;
@@ -85,8 +117,28 @@
               flex-direction: column; }
     .footer__left {
       width: 100%;
-      margin-bottom: 35px; }
+      margin-bottom: 35px;
+      margin-top: 20px; }
     .footer__right {
+      width: 100%;
+      margin-top: 20px; } }
+
+@media screen and (max-width: 650px) {
+  .footer {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .footer__row {
+      width: 50%;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
+    .footer__wrap {
+      margin-bottom: 30px;
       width: 100%; } }
 
 /*# sourceMappingURL=footer.css.map */
