--- a/styles/form.css
+++ b/styles/form.css
@@ -5,79 +5,34 @@
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
-          flex-direction: column; }
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .form__label {
+    width: 100%; }
   .form__input, .form__textarea {
     margin-bottom: 32px;
     padding-bottom: 16px;
     padding-top: 16px;
     width: 100%;
-    font-family: "Proxima Nova", sans-serif;
-    font-size: 16px;
-    line-height: 150%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    color: #4f4f4f;
     outline: none;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-    background-color: #ffec7a;
+    background-color: #ffeb7a;
     -webkit-transition: border-color 1s;
     transition: border-color 1s; }
     .form__input::-webkit-input-placeholder, .form__textarea::-webkit-input-placeholder {
-      font-family: "Proxima Nova", sans-serif;
-      font-size: 16px;
-      line-height: 150%;
-      display: -webkit-box;
-      display: flex;
-      -webkit-box-align: end;
-              align-items: flex-end;
-      color: #4f4f4f;
       opacity: 0.7; }
     .form__input::-moz-placeholder, .form__textarea::-moz-placeholder {
-      font-family: "Proxima Nova", sans-serif;
-      font-size: 16px;
-      line-height: 150%;
-      display: flex;
-      align-items: flex-end;
-      color: #4f4f4f;
       opacity: 0.7; }
     .form__input:-ms-input-placeholder, .form__textarea:-ms-input-placeholder {
-      font-family: "Proxima Nova", sans-serif;
-      font-size: 16px;
-      line-height: 150%;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-align: end;
-          align-items: flex-end;
-      color: #4f4f4f;
       opacity: 0.7; }
     .form__input::-ms-input-placeholder, .form__textarea::-ms-input-placeholder {
-      font-family: "Proxima Nova", sans-serif;
-      font-size: 16px;
-      line-height: 150%;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-align: end;
-          align-items: flex-end;
-      color: #4f4f4f;
       opacity: 0.7; }
     .form__input::placeholder, .form__textarea::placeholder {
-      font-family: "Proxima Nova", sans-serif;
-      font-size: 16px;
-      line-height: 150%;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-align: end;
-          -ms-flex-align: end;
-              align-items: flex-end;
-      color: #4f4f4f;
       opacity: 0.7; }
     .form__input:focus, .form__textarea:focus {
-      border-color: red; }
+      border-color: #121212; }
 
 /*# sourceMappingURL=form.css.map */
