--- a/styles/potr-size.css
+++ b/styles/potr-size.css
@@ -17,7 +17,9 @@
         -ms-flex-direction: column;
             flex-direction: column; }
   .pots-size__img {
-    width: 48%; }
+    width: 48%;
+    height: auto;
+    min-width: 250px; }
 
 .fragment__column {
   display: -webkit-box;
@@ -32,5 +34,33 @@
 .fragment__line {
   width: 2px;
   background-color: #d9d9d9; }
+
+@media screen and (max-width: 900px) {
+  .pots-size__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .pots-size__fragment {
+    width: 90%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; } }
+
+@media screen and (max-width: 1200px) {
+  .pots-size {
+    padding: 150px 50px 0; } }
+
+@media screen and (min-width: 1600px) {
+  .pots-size {
+    padding-left: calc(50% - 575px);
+    padding-right: calc(50% - 575px); } }
 
 /*# sourceMappingURL=potr-size.css.map */
