--- a/styles/team.css
+++ b/styles/team.css
@@ -1,30 +1,29 @@
 .team {
   padding: 0 135px 225px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
   position: relative; }
-  .team__big-word--1 {
-    width: 70%;
+  .team__big-word {
     height: 150px;
     position: absolute;
-    left: 100px;
-    top: 200px;
-    z-index: 2; }
-  .team__big-word--2 {
-    height: 150px;
-    width: 50%;
-    position: absolute;
-    right: 100px;
-    bottom: 130px;
-    z-index: 2; }
+    z-index: 2;
+    max-width: 700px; }
+    .team__big-word--1 {
+      width: 70%;
+      left: 100px;
+      top: 200px; }
+    .team__big-word--2 {
+      width: 50%;
+      right: 100px;
+      bottom: 130px; }
   .team__main-img {
     min-width: 500px;
     max-width: 650px;
@@ -48,12 +47,6 @@
   .team__title {
     margin-bottom: 150px; }
 
-@media screen and (max-width: 1200px) {
-  .team {
-    padding: 0 50px 150px; }
-    .team__text {
-      padding-top: 60px; } }
-
 @media screen and (max-width: 900px) {
   .team__container {
     -webkit-box-orient: vertical;
@@ -73,5 +66,18 @@
     display: none; }
   .team__title {
     margin-bottom: 50px; } }
+
+@media screen and (max-width: 1200px) {
+  .team {
+    padding: 0 50px 150px; }
+    .team__text {
+      padding-top: 60px; } }
+
+@media screen and (min-width: 1600px) {
+  .team {
+    padding-left: calc(50% - 575px);
+    padding-right: calc(50% - 575px); }
+    .team__big-word--1, .team__big-word--2 {
+      display: none; } }
 
 /*# sourceMappingURL=team.css.map */
