--- a/styles/description.css
+++ b/styles/description.css
@@ -38,7 +38,16 @@
               flex-direction: column; }
   .description__img {
     max-width: 500px;
-    height: auto; }
+    height: auto;
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s; }
+    .description__img:hover {
+      -webkit-box-shadow: 0 6px 23px rgba(154, 147, 140, 0.5);
+              box-shadow: 0 6px 23px rgba(154, 147, 140, 0.5);
+      -webkit-transform: scale(1.05);
+              transform: scale(1.05); }
     .description__img--small {
       width: 100%;
       max-width: 350px; }
