--- a/styles/materials.css
+++ b/styles/materials.css
@@ -11,8 +11,8 @@
     width: 60%;
     margin-left: 10%; }
   .materials__container {
-    height: calc(100% - 100px);
     width: 100%;
+    height: 70%;
     text-align: left;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -32,10 +32,15 @@
     width: 100%;
     max-width: 600px; }
     .materials__text:last-child {
+      max-width: 500px;
       width: 80%;
       padding: 35px;
       -webkit-box-sizing: border-box;
-              box-sizing: border-box; }
+              box-sizing: border-box;
+      background: rgba(0, 0, 0, 0.41);
+      mix-blend-mode: normal;
+      -webkit-backdrop-filter: blur(34px);
+              backdrop-filter: blur(34px); }
 
 @media screen and (max-width: 950px) {
   .materials__container {
