--- a/styles/team.css
+++ b/styles/team.css
@@ -17,18 +17,30 @@
     z-index: 2;
     max-width: 700px; }
     .team__big-word--1 {
+      -webkit-transform: translateX(10%);
+              transform: translateX(10%);
       width: 70%;
-      left: 100px;
       top: 200px; }
     .team__big-word--2 {
+      -webkit-transform: translateX(60%);
+              transform: translateX(60%);
       width: 50%;
-      right: 100px;
       bottom: 130px; }
   .team__main-img {
     min-width: 500px;
     max-width: 650px;
     width: 55%;
-    margin-left: 60px; }
+    margin-left: 60px;
+    -webkit-transition: border-radius 1s, -webkit-transform 1s;
+    transition: border-radius 1s, -webkit-transform 1s;
+    transition: transform 1s, border-radius 1s;
+    transition: transform 1s, border-radius 1s, -webkit-transform 1s; }
+    .team__main-img:hover {
+      -webkit-box-shadow: 0 6px 23px rgba(154, 147, 140, 0.5);
+              box-shadow: 0 6px 23px rgba(154, 147, 140, 0.5);
+      -webkit-transform: scale(1.05);
+              transform: scale(1.05);
+      border-radius: 15px; }
   .team__container {
     background: url(../images/header/header-back.png) no-repeat left top;
     background-size: 30% 30%;
